# ImCAM

./: CMakeLists.txt  requirements.txt
cam_engine/: CMakeLists.txt
cam_engine/source/editor/: CMakeLists.txt  main.cpp
cam_engine/source/editor/axis/: axis.cpp
cam_engine/source/editor/cam_editor/: cam_editor.cpp  cam_editor.h
cam_engine/source/editor/global/: editor_global_context.cpp  editor_global_context.h
cam_engine/source/editor/input/: editor_input_manager.cpp  editor_input_manager.h
cam_engine/source/editor/scene/: editor_scene_manager.cpp  editor_scene_manager.h
cam_engine/source/editor/ui/: editor_ui.cpp  editor_ui.h
cam_engine/source/runtime/: CMakeLists.txt  cam_engine.cpp  cam_engine.h
cam_engine/source/runtime/core/log/: log_system.cpp  log_system.h
cam_engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  transform.h
cam_engine/source/runtime/function/global/: global_context.cpp  global_context.h
cam_engine/source/runtime/function/render/: light.h  render_camera.cpp  render_camera.h  render_common.h  render_entity.h  render_guid_allocator.h  render_helper.cpp  render_helper.h  render_mesh.h  render_object.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.cpp  render_resource.h  render_resource_base.cpp  render_resource_base.h  render_scene.cpp  render_scene.h  render_swap_context.cpp  render_swap_context.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
cam_engine/source/runtime/function/ui/: window_ui.cpp  window_ui.h
(+21 files in other folders)
